--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "auth-front": "file:",
     "axios": "^1.7.7",
     "i18next": "^23.15.1",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
