--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "as-react-frest": "^0.0.5",
     "auth-front": "file:",
     "axios": "^1.7.7",
+    "crypto-js": "^4.2.0",
     "i18next": "^23.15.1",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.6.1",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@originjs/vite-plugin-federation": "^1.3.6",
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
